# opanel

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README-zh.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  publish.yml
fabric-1.19/: build.gradle
fabric-1.20.3/: build.gradle
fabric-1.21.2/: build.gradle
fabric-1.21.5/: build.gradle
fabric-26.1/: build.gradle
folia-1.20/: build.gradle
folia-1.20.5/: build.gradle
folia-1.21/: build.gradle
folia-1.21.11/: build.gradle
forge-1.19.4/: build.gradle
forge-1.21/: build.gradle
forge-1.21.11/: build.gradle
forge-1.21.5/: build.gradle
forge-1.21.9/: build.gradle
forge-26.1/: build.gradle
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/components/: alert.tsx  app-sidebar.tsx  autocomplete-input.tsx  config-item.tsx  data-table.tsx  functional-card.tsx  monaco-editor.tsx  navbar.tsx  restart-alert.tsx  terminal-viewer.tsx  text-copy.tsx
frontend/hooks/: use-restart-alert.tsx
frontend/lang/: en-us.json  index.ts  zh-cn.json  zh-hk.json  zh-tw.json
frontend/lib/: api.ts  global.ts  settings.ts  types.ts  utils.ts
frontend/scripts/: bundle.js
frontend/style/: lib.css
frontend/test/: contexts-helper.ts  inventory-helper.ts  setup.ts  terminal-helper.ts  test-helper.tsx  test-utils.tsx
neoforge-1.21.1/: build.gradle
pumpkin/: lib.rs  paths.rs  utils.rs  web.rs
pumpkin/handlers/: auth.rs  frontend.rs  (+4 more)
spigot-1.16.1/: build.gradle
spigot-1.20/: build.gradle
spigot-1.20.5/: build.gradle
spigot-1.21.9/: build.gradle
(+310 files in other folders)
