[package]
name = "opanel"
version = "0.1.0"
edition = "2024"

[lib]
name = "opanel"
path = "pumpkin/lib.rs"
crate-type = ["cdylib"]

[profile.release] 
lto = true

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

tokio = "1.48"
log = "0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "=0.3.19", features = [
  "env-filter",
  "fmt",
  "time",
] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7"
mime_guess = "2.0"
